--- a/html-02.css
+++ b/html-02.css
@@ -1,15 +1,16 @@
 body {
     background-color: red;
+    display:grid;
+    align-items: center;
+    align-self: center;
+    height: 98vh;
 }
-
 #button{
     padding: 1em 1em 1em 1em;
     background-color: black;
     text-decoration: none;
-    width: 20%;
-}
-
-#link {
-    color:white;
-    text-decoration: none;
+    width: 10em;
+    color: white;
+    margin: auto auto auto auto;
+    text-align: center;
 }
